tests/ui/assoc-const.stderr
error: implementation of MyTrait for u8 is unused
  --> tests/ui/assoc-const.rs:12:1
   |
12 | impl MyTrait for u8 {
   | ^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/assoc-const.rs:1:9
   |
 1 | #![deny(redetect::unused)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

